--- a/ProjectExpenseControl/ProjectExpenseControl.csproj
+++ b/ProjectExpenseControl/ProjectExpenseControl.csproj
@@ -480,7 +480,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
-    <Content Include="Scripts\jquery-1.10.2.min.js" />
+    <Content Include="Scripts\jqwidgets\jquery-1.10.2.min.js" />
     <Content Include="Scripts\jqwidgets\globalize.culture.cs-CZ.js" />
     <Content Include="Scripts\jqwidgets\globalize.culture.de-DE.js" />
     <Content Include="Scripts\jqwidgets\globalize.culture.en-CA.js" />
@@ -495,6 +495,7 @@
     <Content Include="Scripts\jqwidgets\globalize.culture.ru-RU.js" />
     <Content Include="Scripts\jqwidgets\globalize.culture.sa-IN.js" />
     <Content Include="Scripts\jqwidgets\globalize.js" />
+    <Content Include="Scripts\jquery-1.11.1.min.js" />
     <Content Include="Scripts\jqwidgets\jqx-all.js" />
     <Content Include="Scripts\jqwidgets\jqxangular.js" />
     <Content Include="Scripts\jqwidgets\jqxbargauge.js" />
@@ -613,9 +614,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201804200343032_initial_migration.cs" />
-    <Compile Include="Migrations\201804200343032_initial_migration.Designer.cs">
-      <DependentUpon>201804200343032_initial_migration.cs</DependentUpon>
+    <Compile Include="Migrations\201804231401186_initial_migration.cs" />
+    <Compile Include="Migrations\201804231401186_initial_migration.Designer.cs">
+      <DependentUpon>201804231401186_initial_migration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountingAccount.cs" />
@@ -655,8 +656,8 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201804200343032_initial_migration.resx">
-      <DependentUpon>201804200343032_initial_migration.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201804231401186_initial_migration.resx">
+      <DependentUpon>201804231401186_initial_migration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
