--- a/ProjectExpenseControl/ProjectExpenseControl.csproj
+++ b/ProjectExpenseControl/ProjectExpenseControl.csproj
@@ -605,8 +605,10 @@
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\InvoicesController.cs" />
     <Compile Include="Controllers\RequestsController.cs" />
+    <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Controllers\StatusAprovsController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Controllers\UserRolesController.cs" />
     <Compile Include="CustomAuthentication\CustomAuthorizeAttribute.cs" />
     <Compile Include="CustomAuthentication\CustomMembership.cs" />
     <Compile Include="CustomAuthentication\CustomMembershipUser.cs" />
@@ -618,9 +620,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201804231401186_initial_migration.cs" />
-    <Compile Include="Migrations\201804231401186_initial_migration.Designer.cs">
-      <DependentUpon>201804231401186_initial_migration.cs</DependentUpon>
+    <Compile Include="Migrations\201805131348263_initial.cs" />
+    <Compile Include="Migrations\201805131348263_initial.Designer.cs">
+      <DependentUpon>201805131348263_initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountingAccount.cs" />
@@ -630,14 +632,17 @@
     <Compile Include="Models\LoginView.cs" />
     <Compile Include="Models\Request.cs" />
     <Compile Include="Models\StatusAprov.cs" />
+    <Compile Include="Models\UserRole.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AccountingAccountRepository.cs" />
     <Compile Include="Services\AreaRepository.cs" />
     <Compile Include="Services\BudgetRepository.cs" />
     <Compile Include="Services\InvoicesRepository.cs" />
     <Compile Include="Services\RequestsRepository.cs" />
+    <Compile Include="Services\RoleRepository.cs" />
     <Compile Include="Services\StatusAprovRepository.cs" />
     <Compile Include="Services\UserRepository.cs" />
+    <Compile Include="Services\UserRoleRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config">
@@ -684,6 +689,18 @@
     <Content Include="Views\AccountingAccounts\Details.cshtml" />
     <Content Include="Views\AccountingAccounts\Edit.cshtml" />
     <Content Include="Views\AccountingAccounts\Index.cshtml" />
+    <Content Include="Views\Roles\Create.cshtml" />
+    <Content Include="Views\Roles\Delete.cshtml" />
+    <Content Include="Views\Roles\Details.cshtml" />
+    <Content Include="Views\Roles\Edit.cshtml" />
+    <Content Include="Views\Roles\Index.cshtml" />
+    <Content Include="Views\Areas\Details.cshtml" />
+    <Content Include="Views\Account\CreateRole.cshtml" />
+    <Content Include="Views\UserRoles\Create.cshtml" />
+    <Content Include="Views\UserRoles\Delete.cshtml" />
+    <Content Include="Views\UserRoles\Details.cshtml" />
+    <Content Include="Views\UserRoles\Edit.cshtml" />
+    <Content Include="Views\UserRoles\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -695,8 +712,8 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201804231401186_initial_migration.resx">
-      <DependentUpon>201804231401186_initial_migration.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201805131348263_initial.resx">
+      <DependentUpon>201805131348263_initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
