--- a/ProjectExpenseControl/bin/ProjectExpenseControl.dll.config
+++ b/ProjectExpenseControl/bin/ProjectExpenseControl.dll.config
@@ -10,9 +10,9 @@
   </configSections>
   
    <connectionStrings>  
-    <add name="AuthenticationDB" connectionString=" Data Source=sql5008.site4now.net;Persist Security Info=True;User ID=DB_A39AAA_net_admin;Password=Equipon3t" providerName="System.Data.SqlClient" />
-    <!--<add name="AuthenticationDB" connectionString=" Data Source=DESKTOP-A2NO1FQ;Initial Catalog=DBProgramExpenses;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-     <!--<add name="AuthenticationDB" connectionString=" Data Source=.\SQLSERVER;Initial Catalog=DBProgramExpenses;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <!--<add name="AuthenticationDB" connectionString=" Data Source=sql5008.site4now.net;Persist Security Info=True;User ID=DB_A39AAA_net_admin;Password=Equipon3t" providerName="System.Data.SqlClient" />-->
+    <add name="AuthenticationDB" connectionString=" Data Source=DESKTOP-A2NO1FQ;Initial Catalog=DBProgramExpenses;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="AuthenticationDB" connectionString=" Data Source=.\SQLSERVER;Initial Catalog=DBProgramExpenses;Integrated Security=True" providerName="System.Data.SqlClient" />-->
    </connectionStrings>  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
